Added comments and login page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,10 @@
+<!-- ADDING FONT AWESOME -->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- 
+  ABOUT EVENTFUL 
+-->
 
 <div class="about-post-content max-width-2 m-auto max-width-1">
   <br>
@@ -25,8 +31,13 @@
   <br>
 </div>
 
+<!-- 
+  CAROUSEL CARDS TO DISPLAY VARIOUS PICTURES
+ -->
 
-
+<!-- 
+  FIRST CAROUSEL WITH 3 CARDS
+  -->
 <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -49,6 +60,11 @@
         </div>
       </div>
     </div>
+
+    <!-- 
+  SECOND CAROUSEL WITH 3 CARDS
+ -->
+
     <div class="carousel-item">
       <div class="card-wrapper container-sm d-flex   justify-content-around">
         <div class="card  " style="width: 18rem;">
@@ -70,6 +86,11 @@
         </div>
       </div>
     </div>
+
+<!-- 
+  THIRD CAROUSEL WITH 3 CARDS
+ -->
+
     <div class="carousel-item">
       <div class="card-wrapper container-sm d-flex  justify-content-around">
         <div class="card " style="width: 18rem;">
@@ -101,6 +122,11 @@
 </div>
 <br><br>
 <br>
+
+
+<!-- 
+  CARDS WITH CSS-BOOTSTRAP ANIMATIONS TO DISPLAY REVIEWS OF PEOPLE
+ -->
 <h2 class="color-text about-title text-center" style="font-weight: bold;">Hear from our <i> Happy Clients</i></h2>
 <br><br>
 <div class="main">
@@ -133,7 +159,7 @@
     <div class="caption">
       <h3>Alyssa Marshall</h3>
       <p>They made the day memorable! Loved them!</p>
-      
+
     </div>
   </div>
   <div class="profile-card">
@@ -146,6 +172,6 @@
       <p>They were Amazing, Amazing & Amazing!!!</p>
     </div>
   </div>
-  
+
 </div>
 <br><br>
