--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,7 +1,14 @@
+/* 
+STYLING CART.COMPONENT.HTML PAGE
+*/
+
 body{
     background-image: url(https://media.istockphoto.com/id/1130298788/photo/flowers-composition-gypsophila-flowers-on-pastel-blue-background-flat-lay-top-view-copy-space.jpg?s=612x612&w=0&k=20&c=26pP6dCuZINwsGHrBOSVZacjEUPhC3I4fV8-LrWSVIw=);
 }
 
+/* 
+THIS FORM DISPLAYED WHEN CLICKED ON SELECT
+*/
 .selectForm{
     margin-left: 40%;
     font-weight: 600;
