--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -7,6 +7,10 @@
     max-width: 80vw;
 }
 
+/*
+STYLING CARDS
+*/
+
 .color-text{
   color:rgb(47,104,104);
 }
@@ -28,6 +32,11 @@
   box-shadow: 0 70px 70px rgba(0, 0, 0, .12), 0 70px 70px rgba(0, 0, 0, .06);
   transform: scale(1.1);
 }
+
+
+/* 
+STYLING PROFILE SECTION (REVIEWS SECTION)
+*/
 
 .main{
   width: 100%;
@@ -64,7 +73,6 @@
 }
 .img img{
   width: 100%;
-  /* height: 100%; */
   border-radius: 20%;
   box-shadow: 0 0 22px #3336;
   transition: .6s;
@@ -96,7 +104,4 @@
   margin-right: 15px;
   font-size: 21px;
   transition: .6s;
-}
-.social-links a:hover{
-  color: #0c52a1;
 }
