--- a/src/app/no-page-found/no-page-found.component.css
+++ b/src/app/no-page-found/no-page-found.component.css
@@ -1,4 +1,8 @@
-.image{
+/* 
+BASIC STYLING WITH AN IMAGE
+*/
+
+.image {
     background-image: url(https://lh5.ggpht.com/_9F9_RUESS2E/SpV5Yi8Vv5I/AAAAAAAAA4E/W9-J8eMLokM/s800/50-Cool-and-Creative-404-Error-Pages-25.jpg);
     height: 300px;
     background-repeat: no-repeat;
@@ -6,6 +10,6 @@
     margin-top: 10px;
 }
 
-.btn-margin{
+.btn-margin {
     margin-left: 45%;
 }
