--- a/src/app/no-page-found/no-page-found.component.html
+++ b/src/app/no-page-found/no-page-found.component.html
@@ -1,3 +1,8 @@
+<!-- 
+    NO PAGE FOUND
+    ROUTING USED IN THIS PAGE
+ -->
+
 <div class="image">
 </div>
 <h3 class="text-center">To go to Home Page</h3><br>
