--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,3 +1,8 @@
+
+<!-- 
+  CAROUSELS AT THE TOP OF THIS PAGE
+ -->
+
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -42,6 +47,10 @@
 
 <div class="about-post-content max-width-2 m-auto max-width-1">
 
+<!-- 
+  ABOUT EVENTFUL
+ -->
+
   <br>
   <p id="first-para" class="text-center">
     Eventful has all the gathering supplies you need, across the board place,
@@ -54,6 +63,11 @@
     <br><br>
   </p>
 </div>
+
+
+<!-- 
+  SEARCH BAR TO SEARCH YOUR CITY : EVENT BINDING USED HERE
+ -->
 
 <div class="container shadow min-vh-40 py-4">
   <div class="row">
@@ -72,6 +86,11 @@
   </div>
 </div>
 <br><br>
+
+<!-- 
+  SERVICES SHOWN IN FORM OF CARDS
+ -->
+
 <h3 style="margin-left: 43%;color: rgb(47,104,104);">Our Services</h3>
 <div class="card-container">
   <div class="card-wrapper col-lg-4 col-md-6 col-xs-12">
@@ -112,13 +131,19 @@
   </div>
 </div>
 
-<!-- Our BestSellers -->
+<!-- 
+  Our BestSellers IN A COLLAGE FORM
+-->
 <h3 style="margin-left: 34%;">Our BestSeller : Wedding Events</h3>
 <div class="container-bestseller">
 </div>
+<br>
+<br>
 
-<br>
-<br>
+<!-- 
+  A BASIC DIV TO PROVIDE OUR KEY POINTS
+ -->
+
 <h3>Our Key Points That Differentiate Us From Others</h3>
 <div class="key-points">
   <div class="box" id="delivery">
@@ -137,9 +162,6 @@
     Follows covid-19 guidelines
   </div>
 </div>
-
-
-
 
 <br><br>
 
