Added new Carousel images

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
      <input type="checkbox" id="flip">
      <div class="cover">
      </div>
-     <form action="#">
+     <form action="#" class="d-flex-center">
        <div class="form-content">
          <!-- 
              LOGIN FORM STARTS HERE
@@ -23,7 +23,7 @@
            <div class="input-groups">
              <div class="input-box">
                <i class="fa fa-envelope"></i>
-               <input type="email" class="input" placeholder="Enter your email" required [(ngModel)]="loginMail">
+               <input type="email" class="input" placeholder="Enter your email" required >
              </div>
            </div>
  
