--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../assets/wedding4.png" class="d-block w-100" alt="...">
+      <img src="https://apis.xogrp.com/media-api/images/0406daad-abed-4a03-90de-fd66aa808733" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Whether it’s a wedding or night out, we can help you create the perfect event. You won’t be disappointed.
         </h5>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://cdn.shopify.com/s/files/1/1832/6341/collections/girl-main_1200x.jpg?v=1675808891"
+      <img src="https://www.usmagazine.com/wp-content/uploads/2022/08/shutterstock_1762066076.jpg?crop=0px%2C636px%2C6260px%2C3539px&resize=1600%2C900&quality=86&strip=all"
         class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>We believe everyone deserves the best party. Wherever you are, whatever you’re doing – celebrate with us.
@@ -28,9 +28,9 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/bday12.jpeg" class="d-block w-100" alt="...">
+      <img src="https://www.brides.com/thmb/iZEOaYoI1llq057qDtdppFfxdvM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-1177485677-76fb4bc6853e4797a441c03b2ba2353a.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5 class="text-light">Event decor is the key to your party’s success. <br> The more interesting and creative, the
+        <h5 class="text-dark">Event decor is the key to your party’s success. <br> The more interesting and creative, the
           better your guests will remember it.</h5>
       </div>
     </div>
