--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -101,7 +101,7 @@
       <div class="card-body">
         <h4 class="card-title">Birthday Parties</h4>
         <p class="card-text">Had 1000+ successful birthday party events in 80+ cities across India</p>
-        <a href="#" class="btn btn-info" routerLinkActive="active" routerLink="/Cart">Explore More</a>
+        <a href="#" class="btn btn-clr" routerLinkActive="active" routerLink="/Cart">Explore More</a>
       </div>
     </div>
   </div>
@@ -113,7 +113,7 @@
       <div class="card-body">
         <h4 class="card-title">Anniversary Celebrations</h4>
         <p class="card-text">Had 870+ successful anniversary parties in 90+ cities across India</p>
-        <a class="btn btn-info" routerLinkActive="active" routerLink="/Cart">Explore More</a>
+        <a class="btn btn-clr" routerLinkActive="active" routerLink="/Cart">Explore More</a>
       </div>
     </div>
   </div>
@@ -125,7 +125,7 @@
       <div class="card-body">
         <h4 class="card-title">Baby Showers</h4>
         <p class="card-text">Had 600+ successful baby showers events in 100+ cities across India.</p>
-        <a href="#" class="btn btn-info" routerLinkActive="active" routerLink="/Cart">Explore More</a>
+        <a href="#" class="btn btn-clr" routerLinkActive="active" routerLink="/Cart">Explore More</a>
       </div>
     </div>
   </div>
