Login form Validation added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,9 @@
         <a class="color-text nav-link fa fa-shopping-cart fs-6 fw-bolder" style="margin-top: 3px;"
           routerLinkActive="active" routerLink="/Cart">&nbsp; Cart</a>
       </li>
+      <li class="nav-item nav-pills-color">
+        <a class="color-text nav-link fs-6 fw-bolder" routerLinkActive="active" routerLink="/Login">Login</a>
+      </li>
     </ul>
   </div>
 </nav>
