--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,81 +6,84 @@
   ANGULAR COMPONENTS: ROUTING, NGIF
  -->
 
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
- <body>
-   <div class="container">
-     <input type="checkbox" id="flip">
-     <div class="cover">
-     </div>
-     <form action="#" class="d-flex-center">
-       <div class="form-content">
-         <!-- 
+<body>
+
+  <div class="container">
+    <input type="checkbox" id="flip">
+    <div class="cover">
+    </div>
+    <form class="d-flex-center">
+      <div class="form-content">
+        <!-- 
              LOGIN FORM STARTS HERE
             -->
-         <div class="login-form">
-           <div class="title">Login</div>
-           <div class="input-groups">
-             <div class="input-box">
-               <i class="fa fa-envelope"></i>
-               <input type="email" class="input" placeholder="Enter your email" required >
-             </div>
-           </div>
- 
-           <div class="input-groups">
-             <div class="input-box">
-               <i class="fa fa-lock"></i>
-               <input type="password" class="input" placeholder="Enter your password" required [(ngModel)]="loginPwd">
-             </div>
-           </div>
- 
-           <div class="input-groups">
-             <div class="button input-box">
-               <button routerLinkActive="active" routerLink='/Services'>Submit</button>
-             </div>
-           </div>
-           <div class="form-link login-text">
-             <span>Don't have an account? <label class="link login-link" for="flip">Signup now</label></span>
-           </div>
-         </div>
- 
-         <!-- 
+        
+          <div class="login-form">
+            <div class="title">Login</div>
+            <div class="input-groups">
+              <div class="input-box">
+                <i class="fa fa-envelope"></i>
+                <input type="email" class="input" name = "_email" placeholder="Enter your email" required [(ngModel)]="_email">
+              </div>
+            </div>
+
+            <div class="input-groups">
+              <div class="input-box">
+                <i class="fa fa-lock"></i>
+                <input type="password" class="input" name="_pwd" placeholder="Enter your password" required [(ngModel)]="_pwd">
+              </div>
+            </div>
+
+            <div class="input-groups">
+              <div class="button input-box">
+                <button type="submit" (click)="checkLogin()">Submit</button>
+              </div>
+            </div>
+            <div class="form-link login-text">
+              <span>Don't have an account? <label class="link login-link" for="flip">Signup now</label></span>
+            </div>
+          </div>
+        
+        <!-- 
              SIGN UP / REGISTER FORM STARTS HERE
             -->
- 
-         <div class="sign-form">
-           <div class="title">Signup</div>
-           <div class="input-groups">
-             <div class="input-box">
-               <i class="fa fa-user"></i>
-               <input type="text" class="input" placeholder="Enter your name" required>
-             </div>
-           </div>
- 
-           <div class="input-groups">
-             <div class="input-box">
-               <i class="fa fa-envelope"></i>
-               <input type="text" class="input" placeholder="Enter your email" required>
-             </div>
-           </div>
- 
-           <div class="input-groups">
-             <div class="input-box">
-               <i class="fa fa-lock"></i>
-               <input type="password" class="input" placeholder="Enter your password" required>
-             </div>
-           </div>
- 
-           <div class="input-groups">
-             <div class="button input-box">
-               <button routerLinkActive="active" routerLink='/Services'>Submit</button>
-             </div>
-           </div>
-           <div class="form-link signup-text">
-             <span>Already have an account? <label class="link login-link" for="flip">Login now </label></span>
-           </div>
-         </div>
-       </div>
-     </form>
-   </div>
- </body>
+        
+          <div class="sign-form">
+            <div class="title">Signup</div>
+            <div class="input-groups">
+              <div class="input-box">
+                <i class="fa fa-user"></i>
+                <input type="text" class="input" placeholder="Enter your name" required>
+              </div>
+            </div>
+
+            <div class="input-groups">
+              <div class="input-box">
+                <i class="fa fa-envelope"></i>
+                <input type="text" class="input" placeholder="Enter your email" name="signUpObj.email" required [(ngModel)]="signUpObj.email">
+              </div>
+            </div>
+
+            <div class="input-groups">
+              <div class="input-box">
+                <i class="fa fa-lock"></i>
+                <input type="password" class="input" placeholder="Enter your password" name="signUpObj.pwd" required [(ngModel)]="signUpObj.pwd">
+              </div>
+            </div>
+
+            <div class="input-groups">
+              <div class="button input-box">
+                <button type="submit" (click)="checkSignUp()">Submit</button>
+              </div>
+            </div>
+            <div class="form-link signup-text">
+              <span>Already have an account? <label class="link login-link" for="flip">Login now </label></span>
+            </div>
+          </div>
+        
+        </div>
+    </form>
+  </div>
+</body>
