NavBar component added

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -6,6 +6,8 @@
   ABOUT EVENTFUL 
 -->
 
+<app-navbar></app-navbar>
+
 <div class="about-post-content max-width-2 m-auto max-width-1">
   <br>
   <h1 class="color-text about-title text-center" style="font-weight: bold;">Why Eventful?</h1>
