--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -3,6 +3,8 @@
  -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<app-navbar></app-navbar>
+
 <body>
     <br><br>
     <div id="faq" class="justify-content-md-center row">FREQUENTLY ASKED QUESTIONS</div>
